[package]
name = "guessing_game_crate"
version = "0.1.0"
authors = ["Tyler Oalman <tyleroalman@gmail.com>"]
edition = "2018"
description = "A fun game where you guess what number the computer has chosen."
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
